# Cube3De

./: .gitignore  CMakeLists.txt  makefile
include/: cube_3d.h
libft/: Makefile  ft_assign_ptr.c  ft_isdigit.c  ft_lstadd_front.c  ft_lstnew.c  ft_lstpop.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memset.c  ft_minmax.c  ft_putendl_fd.c  ft_strchr.c  ft_strlen.c  ft_substr.c  get_next_line.c  get_next_line.h  libft.h
map/: school_subject.cub
mlx_mac/: Makefile
source/: control.c  control_borders.c  draw_walls.c  initialize.c  main.c  parse.c  parse_map.c  parse_settings.c  raycasting.c  utils.c
